# starlight

./: .dockerignore  .editorconfig  .env.example  .gitignore  .oxfmtrc.jsonc  .oxlintrc.json  AGENTS.md  CLAUDE.md  Dockerfile  README.md  biome.json  docker-compose.rocm.yaml  docker-compose.yaml  fly.toml  instrumentation-client.ts  lefthook.yml  next.config.ts  package-bak.json  package.json  pyproject.toml  test.json  tsconfig.json  turbo.json  vercel.json
.agents/skills/grammy-bots/: SKILL.md
.cursor/: worktrees.json
.github/workflows/: classification.yml  deploy.yml
.opencode/: opencode.json
app/: __main__.py  main.py  settings.py  utils.py  video.py
app/filters/: twitter.py
app/handlers/: __init__.py  image.py  video.py
app/handlers/filter/: settings.py
app/services/: twitter.py  video.py
app/services/models/: base.py  post.py  user.py
apps/server/: .env.example  AGENTS.md  Dockerfile  docker-compose.yaml  package.json  prisma.config.ts  tsconfig.json
apps/server/prisma/: index.ts
apps/server/src/: bot.ts  config.ts  index.ts  instrumentation.ts  logger.ts  otel.ts  storage.ts  types.ts
apps/server/src/ai/: chat-reply.ts  llm.ts  memory-summarizer.ts  schema.ts
apps/server/src/ai/tools/: fetch-page.ts  registry.ts  search-web.ts  web-lookup.ts  web.test.ts  web.ts
apps/server/src/crypto/: cookie-encryption.test.ts
apps/server/src/handlers/: chat-member.ts  cobalt-video.ts  image.ts  memory.ts  message.ts  publications.ts  start.ts  tweet-image.ts  video.ts
apps/server/src/middlewares/: logging.ts  message.ts  session.ts
apps/server/src/queue/: absurd.ts  classification.ts  embeddings.ts  image-collector.ts  memory.ts  publishing.ts  scheduler.ts  scrapper.ts
apps/server/src/scripts/: classification.ts  embeddings.ts  enqueue-all-classifications.ts  enqueue-all-embeddings.ts  migrate-cookies.ts  update-photo-dimensions.ts
apps/server/src/services/: channel.ts  chat-memory.ts  cobalt.ts  duplicate-detection.ts  exa.ts  image.ts  markdown.ts  message-parts.ts  runtime.ts  search.ts  twitter-api.ts  video.ts  web.ts
apps/server/src/services/extractors/: base.ts  exa.ts  fetch.ts  parallel.ts  workers.ts
apps/server/src/services/fxembed/: fxembed.service.ts  types.ts
apps/server/src/services/render/: draw.ts  fonts.ts  index.ts  layout.ts  themes.ts
apps/server/src/services/tweet/: tweet-image.service.ts
apps/server/src/utils/: attachment.ts  auth.ts  history.ts  message.test.ts  message.ts  system-prompt.txt  tools.ts
apps/web/: .env.example  Dockerfile  app.config.ts  components.json  package.json  tsconfig.json  vite.config.ts
apps/web/prisma/: schema.prisma
apps/web/src/: client.tsx  index.css  routeTree.gen.ts  router.tsx  ssr.tsx
apps/web/src-bak/: instrumentation-client.ts
apps/web/src-bak/app/: error.tsx  global-error.tsx  layout.tsx  not-found.tsx
apps/web/src-bak/app/app/: page.tsx
apps/web/src-bak/app/cookies/: page.tsx
apps/web/src-bak/components/: ErrorBoundary.tsx  Page.tsx
apps/web/src-bak/components/Link/: Link.tsx
apps/web/src-bak/components/Root/: Root.tsx
apps/web/src-bak/components/ui/: accordion.tsx  alert.tsx  button.tsx  card.tsx  input.tsx  separator.tsx  textarea.tsx
apps/web/src-bak/core/: init.ts
apps/web/src-bak/lib/: utils.ts
apps/web/src/components/: collection-card.tsx  collection-create-dialog.tsx  image-card.tsx  not-found.tsx  profile-share-section.tsx  slot-card.tsx  tweet-card.tsx  tweet-image-grid.tsx
apps/web/src/hooks/: use-search.ts  use-telegram-buttons.ts  use-tweets.ts  useCollectionMutations.ts  useCollectionTweets.ts  useCollections.ts  useTelegramButtons.ts  useTweets.ts
apps/web/src/lib/: actions.ts  auth.ts  cursor-pagination.ts  init.ts  mock-env.ts  mockEnv.ts  pagination.ts  utils.ts
apps/web/src/middleware/: api-auth.ts  auth.ts
apps/web/src/providers/: TelegramButtonsProvider.tsx  telegram-buttons-provider.tsx
apps/web/src/routes/: __root.tsx  app.tsx  collections.tsx  index.tsx  publications.tsx  settings.tsx
apps/web/src/types/: api.ts  dates.ts  telegram-buttons.ts  tweets.ts
apps/web/src/utils/: layout.ts  orpc.ts
backend/: .env.example  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: bot.ts  config.ts  context.ts  index.ts  storage.ts  types.ts
backend/src/handlers/: image.ts  video.ts
backend/src/middlewares/: logging.ts  session.ts
backend/src/queue/: image-collector.ts  scrapper.ts
backend/src/services/: image.ts  twitter.ts  video.ts
classification/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  pyproject.toml
classification/app/: config.py  device.py  logger.py  main.py  models.py  otel.py  utils.py
classification/app/imgutils/: camie.py  camie_model.py  preprocess.py  utils.py
classification/app/routes/: classification.py  embeddings.py
frontend/: .gitignore  README.md  biome.json  components.json  package.json  tailwind.config.ts
frontend/public/locales/: en.json  ru.json
frontend/src/: instrumentation-client.ts  mockEnv.ts
frontend/src/app/: layout.tsx  not-found.tsx  page.tsx
frontend/src/app/_assets/: globals.css
frontend/src/app/app/: page.tsx
frontend/src/app/cookies/: page.tsx
frontend/src/components/: ErrorBoundary.tsx  ErrorPage.tsx  Page.tsx
frontend/src/components/Link/: Link.tsx
frontend/src/components/Root/: Root.tsx
frontend/src/components/ui/: accordion.tsx  alert.tsx  button.tsx
frontend/src/core/: init.ts
frontend/src/core/i18n/: i18n.ts  locale.ts  provider.tsx
frontend/src/css/: classnames.ts
frontend/src/hooks/: useTelegramApp.ts
frontend/src/lib/: utils.ts
prisma/migrations/20250605203639_init/: migration.sql
src/app/: global-error.tsx  not-found.tsx
src/app/app/: page.tsx
src/app/cookies/: page.tsx
src/components/Root/: Root.tsx
src/css/: bem.ts
src/server/: bot.ts  config.ts  index.ts  logger.ts  storage.ts  types.ts
src/server/handlers/: image.ts  video.ts
src/server/middlewares/: logging.ts  session.ts
src/server/queue/: image-collector.ts  scrapper.ts
src/server/services/: video.ts
(+31 files in other folders)
