[tool.poetry]
name = "birder"
version = "0.1.0"
description = ""
authors = ["divaltor <vlad@divaltor.dev>"]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.3.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
ruff-lsp = "^0.0.49"
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
